syntax = "proto3";

package monitoring;

option go_package = "github.com/gripmock/grpctestify/examples/iot-monitoring/server/monitoringpb";

import "google/protobuf/timestamp.proto";

// IoT Monitoring Service for device management and real-time monitoring
service IoTMonitoringService {
  // Unary RPCs
  rpc RegisterDevice(RegisterDeviceRequest) returns (RegisterDeviceResponse);
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
  rpc UpdateDeviceStatus(UpdateDeviceStatusRequest) returns (UpdateDeviceStatusResponse);
  rpc GetDeviceMetrics(GetDeviceMetricsRequest) returns (GetDeviceMetricsResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Server Streaming - Real-time device status updates
  rpc StreamDeviceStatus(StreamDeviceStatusRequest) returns (stream DeviceStatusUpdate);
  
  // Client Streaming - Bulk device configuration updates
  rpc BulkUpdateDevices(stream BulkUpdateDeviceRequest) returns (BulkUpdateDevicesResponse);
  
  // Bidirectional Streaming - Real-time device monitoring and control
  rpc MonitorDevices(stream DeviceCommand) returns (stream DeviceTelemetry);
}

// Device registration
message RegisterDeviceRequest {
  string device_id = 1;
  string device_name = 2;
  string device_type = 3;
  string location = 4;
  map<string, string> metadata = 5;
  string firmware_version = 6;
}

message RegisterDeviceResponse {
  bool success = 1;
  string message = 2;
  Device device = 3;
}

// Device retrieval
message GetDeviceRequest {
  string device_id = 1;
}

message GetDeviceResponse {
  bool found = 1;
  Device device = 2;
}

// Device status update
message UpdateDeviceStatusRequest {
  string device_id = 1;
  DeviceStatus status = 2;
  string reason = 3;
}

message UpdateDeviceStatusResponse {
  bool success = 1;
  string message = 2;
  Device device = 3;
}

// Device metrics
message GetDeviceMetricsRequest {
  string device_id = 1;
  string metric_type = 2; // "temperature", "humidity", "pressure", "all"
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
}

message GetDeviceMetricsResponse {
  string device_id = 1;
  string metric_type = 2;
  repeated MetricDataPoint data_points = 3;
  int32 total_points = 4;
}

// Health check
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  string status = 1;
  string version = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> metadata = 4;
}

// Server streaming - Device status updates
message StreamDeviceStatusRequest {
  repeated string device_ids = 1;
  int32 update_interval_seconds = 2;
}

message DeviceStatusUpdate {
  string device_id = 1;
  DeviceStatus status = 2;
  google.protobuf.Timestamp timestamp = 3;
  string message = 4;
  map<string, string> metadata = 5;
}

// Client streaming - Bulk device updates
message BulkUpdateDeviceRequest {
  string device_id = 1;
  string operation = 2; // "update_config", "restart", "firmware_update"
  map<string, string> parameters = 3;
}

message BulkUpdateDevicesResponse {
  int32 total_processed = 1;
  int32 successful = 2;
  int32 failed = 3;
  repeated string errors = 4;
  repeated string successful_devices = 5;
}

// Bidirectional streaming - Device monitoring and control
message DeviceCommand {
  string device_id = 1;
  string command_type = 2; // "start_monitoring", "stop_monitoring", "get_status", "set_config"
  map<string, string> parameters = 3;
  string request_id = 4;
}

message DeviceTelemetry {
  string device_id = 1;
  string request_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  TelemetryData telemetry = 4;
  DeviceStatus status = 5;
  string message = 6;
}

// Data structures
message Device {
  string id = 1;
  string name = 2;
  string type = 3;
  string location = 4;
  DeviceStatus status = 5;
  string firmware_version = 6;
  google.protobuf.Timestamp last_seen = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  map<string, string> metadata = 10;
  map<string, string> configuration = 11;
}

enum DeviceStatus {
  DEVICE_STATUS_UNKNOWN = 0;
  DEVICE_STATUS_ONLINE = 1;
  DEVICE_STATUS_OFFLINE = 2;
  DEVICE_STATUS_MAINTENANCE = 3;
  DEVICE_STATUS_ERROR = 4;
  DEVICE_STATUS_UPDATING = 5;
}

message MetricDataPoint {
  google.protobuf.Timestamp timestamp = 1;
  string metric_name = 2;
  double value = 3;
  string unit = 4;
  map<string, string> tags = 5;
}

message TelemetryData {
  double temperature = 1;
  double humidity = 2;
  double pressure = 3;
  double voltage = 4;
  double current = 5;
  int32 signal_strength = 6;
  int32 battery_level = 7;
  map<string, double> custom_metrics = 8;
}
